Fix overflow on faculty info boxes

--- a/frontend/public/scss/product-faculty-members.scss
+++ b/frontend/public/scss/product-faculty-members.scss
@@ -19,16 +19,17 @@
 
     width: calc(50% - 44px);
     margin: 0 22px 24px;
+    min-width: min-content;
 
     .member-card {
       padding: 24px;
-      overflow: hidden;
       border-radius: 4px !important;
       box-shadow: 0 1px 0 0 rgb(0 0 0 / 12%);
+      display: flex;
 
       .member-info {
-        overflow: hidden;
         margin-top: 7px;
+        display: flow-root;
 
         @include media-breakpoint-down(md) {
           margin-top: 20px;
@@ -59,7 +60,7 @@
       width: 110px;
       border-radius: 50%;
       object-fit: cover;
-      margin-right: 24px;
+      margin: 0 24px 20px 0;
 
       @include media-breakpoint-down(sm) {
         display: block;
